perfectly working tailwindcss

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="bg-yellow-300">
     <div><!--content wrapper-->
         <div>
             <nav>
@@ -35,7 +35,7 @@
                 <a href="#">sign up</a>
             </div>
             <header>
-                <h2>Recipies</h2>
+                <h2 class="text-lg">Recipies</h2>
                 <h3>For Ninjas</h3>
             </header>
             <div>
