--- a/public/index.html
+++ b/public/index.html
@@ -1,66 +1,52 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rocket</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-yellow-300">
-    <div><!--content wrapper-->
-        <div>
-            <nav>
-                <div>
-                    <h1>
-                        <a href="/">food ninja</a>
-                    </h1>
-                </div>
-                <ul>
-                    <li>
-                        <a href="#"><span>Home</span></a>
-                    </li>
-                    <li>
-                        <a href="#"><span>About</span></a>
-                    </li>
-                    <li>
-                        <a href="#"><span>contact</span></a>
-                    </li>
-                </ul>
-            </nav>
-        </div><!--end nav-->
-        <main>
-            <div>
-                <a href="#">log in</a>
-                <a href="#">sign up</a>
-            </div>
-            <header>
-                <h2 class="text-lg">Recipies</h2>
-                <h3>For Ninjas</h3>
-            </header>
-            <div>
-                <h4>Latest Recipes</h4>
-                <div>
-                    <!--cards go here-->
-                    <div>
-                        <img src="img/curry.jpg" alt="curry">
-                        <div>
-                            <span>5 Bean Chilli Stew</span>
-                            <span>Recipe by Mario</span>
-                        </div>
-                    </div>
-                </div>
-                <h4>Most Popular</h4>
-                <div>
-                    <!--cards go here-->
-                </div>
+<body class="min-h-screen bg-slate-50 dark:bg-black dark:text-white">
+  <header class="bg-teal-700 text-white sticky top-0 z-10">
+    <section class="max-w-4xl mx-auto p-4 flex justify-between items-center">
+      <h1 class="text-3xl font-medium">
+        <a href="#hero">🚀 Acme Rockets</a>
+      </h1>
+      <div>
+        <button id="mobile_open_button" class="text-3xl sm:hidden focus:outline-none">☰</button>
+      </div>
+      <nav class="hidden sm:block space-x-10 text-xl" aria-label="main">
+        <a href="" class="hover:opacity-60">Our Rockets</a>
+        <a href="" class="hover:opacity-60">Test Monials</a>
+        <a href="" class="hover:opacity-60">Contact Us</a>
+      </nav>
+    </section>
+  </header>
+  <main class="max-w-4xl mx-auto">
+    <section id="hero" class="flex flex-col-reverse justify-center sm:flex-row p-6 items-center gap-8 mb-12">
+      <article class="sm:w-1/2">
+        <h2 class="max-w-md text-4xl font-bold text-center sm:text-5sl sm:text-left text-slate-900 dark:text-white">
+          We Boldy Go <span class="text-indigo-300"> Where No Rocket</span> Has Gone Before...
+        </h2>
+        <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700 dark:text-slate-400">
+          We're building Rockets for the next century today. From the moon to Mars,Jupiter and beyond...
+        </p>
+        <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700 dark:text-slate-400">
+          Think Acme Rockets.
+        </p>
+      </article>
+      <img class="w-1/2" src="./img/rocketdab.png" alt="">
+    </section>
+    <hr class="mx-auto bg-black dark:bg-white w-1/2">
+    <section id="rockets" class="p-6 my-12">
+      <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">
+        Our Rockets
+      </h2>
+    </section>
+  </main>
 
-                <div>
-                    <div>Load More</div>
-                </div>
-            </div>
-        </main>
-    </div>
 </body>
 
 </html>
