--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
   <meta charset="UTF-8">
@@ -18,14 +18,14 @@
         <button id="mobile_open_button" class="text-3xl sm:hidden focus:outline-none">☰</button>
       </div>
       <nav class="hidden sm:block space-x-10 text-xl" aria-label="main">
-        <a href="" class="hover:opacity-60">Our Rockets</a>
-        <a href="" class="hover:opacity-60">Test Monials</a>
-        <a href="" class="hover:opacity-60">Contact Us</a>
+        <a href="#rockets" class="hover:opacity-60">Our Rockets</a>
+        <a href="#testimonials" class="hover:opacity-60">Test Monials</a>
+        <a href="#Contact" class="hover:opacity-60">Contact Us</a>
       </nav>
     </section>
   </header>
   <main class="max-w-4xl mx-auto">
-    <section id="hero" class="flex flex-col-reverse justify-center sm:flex-row p-6 items-center gap-8 mb-12">
+    <section id="hero" class="flex flex-col-reverse justify-center sm:flex-row p-6 items-center gap-8 mb-12 scroll-mt-40">
       <article class="sm:w-1/2">
         <h2 class="max-w-md text-4xl font-bold text-center sm:text-5sl sm:text-left text-slate-900 dark:text-white">
           We Boldy Go <span class="text-indigo-300"> Where No Rocket</span> Has Gone Before...
@@ -44,7 +44,44 @@
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">
         Our Rockets
       </h2>
+      <ul class="list-none mx-auto my-12 flex flex-col sm:flex-row items-center gap-8">
+        <li class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 dark:bg-black bg-white py-6 px-2 rounded-3xl shadow-xl">
+          <img class="mb-6 w-1/2" src="./img/rocketman.png" alt="Explorer">
+          <h3 class="text-3xl text-center text-slate-900 dark:text-white">Explorer</h3>
+          <p class="hidden sm:block mt-2 text-3xl text-center text-slate-900 dark:text-white">$</p>
+          <p class="sm:hidden mt-2 text-2xl text-center text-slate-900 dark:text-white">Affordable Exploration</p>
+        </li>
+
+        <li class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 dark:bg-black bg-white py-6 px-2 rounded-3xl shadow-xl">
+          <img class="mb-6 w-1/2" src="./img/rocketride.png" alt="Adventure">
+          <h3 class="text-3xl text-center text-slate-900 dark:text-white">Adventure</h3>
+          <p class="hidden sm:block mt-2 text-3xl text-center text-slate-900 dark:text-white">$$</p>
+          <p class="sm:hidden mt-2 text-2xl text-center text-slate-900 dark:text-white">Best selling rocket!</p>
+        </li>
+
+        <li class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 dark:bg-black bg-white py-6 px-2 rounded-3xl shadow-xl">
+          <img class="mb-6 w-1/2" src="./img/rocketlaunch.png" alt="Infinity">
+          <h3 class="text-3xl text-center text-slate-900 dark:text-white">Infinity</h3>
+          <p class="hidden sm:block mt-2 text-3xl text-center text-slate-900 dark:text-white">$$$</p>
+          <p class="sm:hidden mt-2 text-2xl text-center text-slate-900 dark:text-white">Luxury Starship</p>
+        </li>
+      </ul>
     </section>
+    <hr class="mx-auto bg-black dark:bg-white w-1/2">
+
+    <section id="testimonials" class="p-6 my-12">
+      <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">
+        Testimonials
+      </h2>
+    </section>
+    <hr class="mx-auto bg-black dark:bg-white w-1/2">
+
+    <section id="Contact" class="p-6 my-12">
+      <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">
+        Contact Us
+      </h2>
+    </section>
+    <hr class="mx-auto bg-black dark:bg-white w-1/2">
   </main>
 
 </body>
