--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <header class="bg-teal-700 text-white sticky top-0 z-10">
     <section class="max-w-4xl mx-auto p-4 flex justify-between items-center">
       <h1 class="text-3xl font-medium">
-        <a href="#hero">🚀 Acme Rockets</a>
+        <a href="#hero">🚀 <span class="text-indigo-300 bg-teal-600 rounded-md px-2">Acme</span> Rockets</a>
       </h1>
       <div>
         <button id="mobile_open_button" class="text-3xl sm:hidden focus:outline-none">☰</button>
@@ -26,7 +26,7 @@
   </header>
   <main class="max-w-4xl mx-auto">
     <section id="hero"
-      class="flex flex-col-reverse justify-center sm:flex-row p-6 items-center gap-8 mb-12 scroll-mt-40">
+      class="flex flex-col-reverse justify-center sm:flex-row p-6 items-center gap-8 mb-12 scroll-mt-40 widescreen:section-min-height tallscreen:section-min-height">
       <article class="sm:w-1/2">
         <h2 class="max-w-md text-4xl font-bold text-center sm:text-5sl sm:text-left text-slate-900 dark:text-white">
           We Boldy Go <span class="text-indigo-300"> Where No Rocket</span> Has Gone Before...
@@ -41,9 +41,9 @@
       <img class="w-1/2" src="./img/rocketdab.png" alt="">
     </section>
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
-    <section id="rockets" class="p-6 my-12 scroll-mt-30">
+    <section id="rockets" class="p-6 my-12 scroll-mt-30 widescreen:section-min-height tallscreen:section-min-height">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">
-        Our Rockets
+        <span class="text-teal-300">Our</span> Rockets
       </h2>
       <ul class="list-none mx-auto my-12 flex flex-col sm:flex-row items-center gap-8">
         <li
@@ -73,7 +73,7 @@
     </section>
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
-    <section id="testimonials" class="p-6 my-12 scroll-mt-16">
+    <section id="testimonials" class="p-6 my-12 scroll-mt-16 widescreen:section-min-height tallscreen:section-min-height">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">
         Testimonials
       </h2>
@@ -120,23 +120,42 @@
     </section>
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
-    <section id="Contact" class="p-6 my-12">
+    <section id="Contact" class="p-6 my-12 widescreen:section-min-height tallscreen:section-min-height">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">
-        Contact Us
+        Contact <span class="text-teal-300">Us</span>
       </h2>
       <form action="" class="max-w-4xl mx-auto text-2xl sm:text-3xl flex flex-col items-start gap-4">
         <label for="subject">Subject:</label>
         <input type="text" id="subject" name="subject" required minlength="3" maxlength="60" placeholder="your subject"
-          class="w-full text-black text-2xl sm:text-3xl rounded-3xl border border-solid border-slate-900 dark:border-none" />
+          class="hover:bg-yellow-50 w-full text-black p-2 text-xl sm:text-3xl rounded-xl border border-solid border-slate-900 dark:border-none" />
         <label for="message">message:</label>
         <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message" required
-          class="w-full text-black text-2xl sm:text-3xl p-3 rounded-xl border border-solid border-slate-900 dark:border-none"></textarea>
+          class="hover:bg-yellow-50 w-full text-black text-xl sm:text-3xl p-3 rounded-xl border border-solid border-blue-900 dark:border-none"></textarea>
         <button
-          class="bg-teal-700 hover:bg-teal-600 active:bg-teal-500 text-white p-3 w-48 rounded-xl border border-solid border-slate-900 dark:border-none">Submit</button>
+          class="bg-teal-700 hover:bg-teal-500 active:bg-teal-500 text-white p-3 w-48 rounded-xl border border-solid border-red-900 dark:border-none">Submit</button>
       </form>
     </section>
   </main>
-
+  <footer id="footer" class="bg-teal-700 text-white text-xl">
+    <section class="max-w-4xl mx-auto p-4 flex flex-col sm:flex-row sm:justify-between">
+      <address>
+        <h2>Acme Rocket-powered products, Inc.</h2>
+        555 Astro Way <br>
+        Fairfield, New Jersey 12345-5555 <br>
+        Email: <a href="mailto:adarshshanu3@gmail.com">adarshshanu3@gmail.com</a><br>
+        Phone: <a href="tel: 91+ 7356683993">91+ 7356683993</a>
+      </address>
+      <nav class="col:hidden gap-2" aria-label="footer">
+        <a href="#rockets" class="hover:opacity-90">Our Rockets</a><br>
+        <a href="#testmonials" class="hover:opacity-90">Testimonials</a><br>
+        <a href="#contact" class="hover:opacity-90">Contact Us</a>
+      </nav>
+      <div class="flex flex-col sm:gap-2">
+        <p class="text-right">Copyright &copy; <span id="year">2022</span></p>
+        <p class="text-right">All right Reserved</p>
+      </div>
+    </section>
+  </footer>
 </body>
 
 </html>
