--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rocket</title>
   <link rel="stylesheet" href="style.css">
+  <script src="js/main.js" defer></script>
 </head>
 
 <body class="min-h-screen bg-slate-50 dark:bg-black dark:text-white">
@@ -15,12 +16,29 @@
         <a href="#hero">🚀 <span class="text-indigo-300 bg-teal-600 rounded-md px-2">Acme</span> Rockets</a>
       </h1>
       <div>
-        <button id="mobile_open_button" class="text-3xl sm:hidden focus:outline-none">☰</button>
+        <button id="hamburger-button" class="text-3xl md:hidden cursor-pointer relative w-8 h-8">
+          <div
+            class="absolute top-4 -mt-0.5 h-1 w-8 rounded bg-white transition-all duration-500 before:absolute before:h-1 before:w-8 before:-translate-x-4 before:-translate-y-3 before:rounded before:bg-white before:transition-all before:duration-500 before:content-[''] after:absolute after:h-1 after:w-8 after:-translate-x-4 after:translate-y-3 after:rounded after:bg-white after:transition-all after:duration-500 after:content-['']">
+          </div>
+        </button>
+        <!-- &#9776; -->
       </div>
-      <nav class="hidden sm:block space-x-10 text-xl" aria-label="main">
+      <nav class="hidden md:block space-x-10 text-xl" aria-label="main">
         <a href="#rockets" class="hover:opacity-60">Our Rockets</a>
         <a href="#testimonials" class="hover:opacity-60">Test Monials</a>
         <a href="#Contact" class="hover:opacity-60">Contact Us</a>
+      </nav>
+    </section>
+    <section id="mobile-menu"
+      class="absolute top-68 bg-black w-full text-4xl flex flex-col justify-center origin-top animate-open-menu hidden">
+      <!-- <button class="toggle-btn text-6xl self-end float-end top-0 px-6"></button> -->
+      <!-- &times; -->
+      <nav class="flex flex-col min-h-screen items-center py-8" aria-label="mobile">
+        <a href="#hero" class="w-full text-center py-6 hover:text-teal-200">Home</a>
+        <a href="#rockets" class="w-full text-center py-6 hover:text-teal-200">Rockets</a>
+        <a href="#testimonials" class="w-full text-center py-6 hover:text-teal-200">Testimonials</a>
+        <a href="#contact" class="w-full text-center py-6 hover:text-teal-200">Contact Us</a>
+        <a href="#footer" class="w-full text-center py-6 hover:text-teal-200">Leagal</a>
       </nav>
     </section>
   </header>
@@ -73,7 +91,8 @@
     </section>
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
-    <section id="testimonials" class="p-6 my-12 scroll-mt-16 widescreen:section-min-height tallscreen:section-min-height">
+    <section id="testimonials"
+      class="p-6 my-12 scroll-mt-16 widescreen:section-min-height tallscreen:section-min-height">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">
         Testimonials
       </h2>
