--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       </nav>
     </section>
     <section id="mobile-menu"
-      class="absolute top-68 bg-black w-full text-4xl flex flex-col justify-center origin-top animate-open-menu hidden">
+      class="absolute top-68 bg-black w-full text-4xl flex flex-col justify-center origin-top animate-open-menu hidden text-papayawhip-light">
       <!-- <button class="toggle-btn text-6xl self-end float-end top-0 px-6"></button> -->
       <!-- &times; -->
       <nav class="flex flex-col min-h-screen items-center py-8" aria-label="mobile">
@@ -99,7 +99,7 @@
       <figure class="my-12">
         <blockquote class="bg-teal-600 dark:bg-black pl-14 pr-8 py-12 rounded-3xl relative">
           <p
-            class="text-2xl sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after:-translate-x-2 after:-translate-y-2">
+            class="text-2xl dark:hover:text-gray-300 sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after:-translate-x-2 after:-translate-y-2">
             Acme
             has always been there
             for me. Their Explorer rocket arrived in a wooden crate as expected.
@@ -113,7 +113,7 @@
       <figure class="my-12">
         <blockquote class="bg-teal-600 dark:bg-black pl-14 pr-8 py-12 rounded-3xl relative">
           <p
-            class="text-2xl sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after:-translate-x-2 after:-translate-y-2">
+            class="text-2xl dark:hover:text-gray-300 sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after:-translate-x-2 after:-translate-y-2">
             The Acme adventurer Rocket has thwarted my illudium !-36 Explosive Space Modulator on several occassions..
             <span class="italic">This makes me very,very angry!</span> Nevertheless, k-9 and i have awarded Acme the
             Martian contract for space exploration rockets based on Acme's Quality and sturdy designs.
@@ -126,7 +126,7 @@
       <figure class="my-12">
         <blockquote class="bg-teal-600 dark:bg-black pl-14 pr-8 py-12 rounded-3xl relative">
           <p
-            class="text-2xl sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after:-translate-x-2 after:-translate-y-2">
+            class="text-2xl dark:hover:text-gray-300 sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after:-translate-x-2 after:-translate-y-2">
             I knew I not only wanted &#8212; <span class="italic">I needed</span> &#8212; Acme's Infinity Rocket for my
             mission in space. Acme delivered in one day! Nothing says <q class="italic">Take me to your leader</q> like
             Acme's infinity Rocket!
@@ -156,18 +156,18 @@
     </section>
   </main>
   <footer id="footer" class="bg-teal-700 text-white text-xl">
-    <section class="max-w-4xl mx-auto p-4 flex flex-col sm:flex-row sm:justify-between">
+    <section class="max-w-4xl mx-auto px-5 pt-10 pb-5 flex flex-col sm:flex-row sm:justify-between">
       <address>
         <h2>Acme Rocket-powered products, Inc.</h2>
         555 Astro Way <br>
         Fairfield, New Jersey 12345-5555 <br>
-        Email: <a href="mailto:adarshshanu3@gmail.com">adarshshanu3@gmail.com</a><br>
+        Email: <a href="mailto:adarshshanu3@gmail.com" class="hover:text-blue-300">adarshshanu3@gmail.com</a><br>
         Phone: <a href="tel: 91+ 7356683993">91+ 7356683993</a>
       </address>
       <nav class="col:hidden gap-2" aria-label="footer">
-        <a href="#rockets" class="hover:opacity-90">Our Rockets</a><br>
-        <a href="#testmonials" class="hover:opacity-90">Testimonials</a><br>
-        <a href="#contact" class="hover:opacity-90">Contact Us</a>
+        <a href="#rockets" class="hover:opacity-80">Our Rockets</a><br>
+        <a href="#testmonials" class="hover:opacity-80">Testimonials</a><br>
+        <a href="#contact" class="hover:opacity-80">Contact Us</a>
       </nav>
       <div class="flex flex-col sm:gap-2">
         <p class="text-right">Copyright &copy; <span id="year">2022</span></p>
